# orv-quote-api

./: .gcloudignore  .gitignore  README.md  app.yaml  deployment.md  main.py  pyproject.toml  requirements.txt  submit_quote.py  wsgi.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  quote_request.md
.github/workflows/: codeql.yml  deploy.yml
orv_quote_api/: __init__.py  long_quotes.json  short_quotes.json
quotes/: long_quotes.json  short_quotes.json
